feat: get user profile
