# spec/api.yaml
@@ -55,6 +55,21 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /user/me:
+    parameters:
+      - $ref: '#/components/parameters/AuthToken'
+    get:
+      summary: get user details
+      tags:
+        - user
+      operationId: getUserDetails
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
   /donations:
     get:
       summary: view all donations
